# docs/swagger.json
@@ -68,10 +68,7 @@
                         }
                     },
                     "500": {
-                        "description": "Status Internal Server Error 500",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Internal Server Error 500"
                     }
                 }
             },
@@ -94,7 +91,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.Song"
+                            "$ref": "#/definitions/TestEffectiveMobile_internal_models.SongPart"
                         }
                     }
                 ],
@@ -102,20 +99,14 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/TestEffectiveMobile_internal_models.Song"
+                            "$ref": "#/definitions/TestEffectiveMobile_internal_models.SongPart"
                         }
                     },
                     "400": {
-                        "description": "Status Bad Request 400",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Bad Request 400"
                     },
                     "500": {
-                        "description": "Status Internal Server Error 500",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Internal Server Error 500"
                     }
                 }
             }
@@ -135,8 +126,7 @@
                         "type": "integer",
                         "description": "Pagination",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
@@ -154,16 +144,10 @@
                         }
                     },
                     "400": {
-                        "description": "Status Bad Request 400",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Bad Request 400"
                     },
                     "500": {
-                        "description": "Status Internal Server Error 500",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Internal Server Error 500"
                     }
                 }
             },
@@ -193,7 +177,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.Song"
+                            "$ref": "#/definitions/TestEffectiveMobile_internal_models.Song"
                         }
                     }
                 ],
@@ -205,16 +189,10 @@
                         }
                     },
                     "400": {
-                        "description": "Status Bad Request 400",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Bad Request 400"
                     },
                     "500": {
-                        "description": "Status Internal Server Error 500",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Internal Server Error 500"
                     }
                 }
             },
@@ -241,16 +219,7 @@
                         "description": "No Content"
                     },
                     "400": {
-                        "description": "Status Bad Request 400",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Status Internal Server Error 500",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "Status Bad Request 400"
                     }
                 }
             }
@@ -262,9 +231,6 @@
             "properties": {
                 "group": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "link": {
                     "type": "string"
@@ -280,25 +246,13 @@
                 }
             }
         },
-        "internal_handlers.Song": {
+        "TestEffectiveMobile_internal_models.SongPart": {
             "type": "object",
             "properties": {
                 "group": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "releaseDate": {
-                    "type": "string"
-                },
                 "song": {
-                    "type": "string"
-                },
-                "text": {
                     "type": "string"
                 }
             }
